--- a/index.html
+++ b/index.html
@@ -400,6 +400,30 @@
             </div>
         </section>
     </main>
+    <!-- modal window -->
+    <div class="overlay-modal">
+        <div class="modal">
+            <p class="modal-text">
+                Leave your contacts and we will call you back
+            </p>
+            <label class="label-input">Name
+                <input class="input-modal" type="text" name="name">
+            </label>
+            <label class="label-input">Phone
+                <input class="input-modal" type="number" name="phone">
+            </label>
+            <label class="label-input">Email
+                <input class="input-modal" type="text" name="email">
+            </label>
+            <label class="label-input">Comment
+                <textarea class="text-area" placeholder="Text input"></textarea>
+            </label>
+            <p class="policy">
+                I accept the terms and conditions of the <a class="link-policy" href="">Privacy Policy</a>
+            </p>
+
+        </div>
+    </div>
 
 
 
