--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     <label for="user-name" class="label-input">Name</label>
                     <div class="class-for-input">
                         <input id="user-name" class="input-modal" type="text" name="user-name">
-                        <svg class="icon-modalname" width="12" height="12">
+                        <svg class="icon-modalname" width="18" height="24">
                             <use class="use-modalname" href="./images/icons.svg#icon-person"></use>
                         </svg>
                     </div>
@@ -498,38 +498,44 @@
 
 
                 <div class="iconphone-wrap">
-                    <label class="label-input">Phone</label>
+                    <label for="user-phone" class="label-input">Phone</label>
                     <div class="class-for-input">
-                        <input class="input-modal" type="number" name="phone">
-                        <svg class="icon-modalphone" width="12" height="12">
+                        <input id="user-phone" class="input-modal" type="number" name="user-phone">
+                        <svg class="icon-modalphone" width="18" height="24">
                             <use class="use-modalphone" href="./images/icons.svg#icon-tel"></use>
                         </svg>
                     </div>
                 </div>
 
                 <div class="iconmail-wrap">
-                    <label class="label-input">Email</label>
+                    <label for="user-email" class="label-input">Email</label>
                     <div class="class-for-input">
-                        <input class="input-modal" type="text" name="email">
-                        <svg class="icon-modalemail" width="12" height="12">
+                        <input id="user-email" class="input-modal" type="text" name="user-email">
+                        <svg class="icon-modalemail" width="18" height="24">
                             <use class="use-modalemail" href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
                 </div>
-
-                <textarea class="text-area" placeholder="Text input"></textarea>
                 <div class="checkpolicy-modal">
-                    <input value="true" class="check-modal visually-hidden" type="checkbox" name="check-policy"
-                        id="policy">
-                    <label class="check-policy" for="policy">
-                        <span class="span-modal">
-                            <svg class="icon-modal-check" width="10" height="8">
-                                <use class="icon-check" href="./images/icons.svg#icon-check"></use>
-                            </svg>
-                        </span>I accept the terms and conditions of
-                        the <a class="link-policy" href="">Privacy
-                            Policy</a></label>
+                    <label for="user-comment" class="check-policy">Comment</label>
+                    <textarea id="user-comment" name="user-comment" class="text-area"
+                        placeholder="Text input"></textarea>
                 </div>
+                <div class="modal-policy">
+                    <input id="user-privacy" value="true" class="check-modal visually-hidden" type="checkbox"
+                        name="user-privacy">
+                    <label for="user-privacy" class="modal-policylabel">I accept the terms and conditions of
+                        the</label><a class="link-policy" href="">Privacy
+                        Policy</a>
+                    <span class="span-modal">
+                        <svg class="icon-modal-check" width="10" height="8">
+                            <use class="icon-check" href="./images/icons.svg#icon-check"></use>
+                        </svg>
+                    </span>
+                </div>
+
+
+
                 <div class="bottom-btn-modal">
                     <button type="submit" class="btn-undermodal">Send
                     </button>
