--- a/index.html
+++ b/index.html
@@ -454,27 +454,24 @@
             </div>
             <!-- footer modal -->
             <div class="footer-modal">
-                <div class="footer-second">
-                    <p class="footer-modaltext">Subscribe</p>
-                </div>
-                <div class="footer-input">
-                    <form class="footer-form">
-                        <label aria-label="footer-email" class="footer-label-email">
-                            <input type="email" class="footer-email" placeholder="E-mail">
-                        </label>
-                        <button type="submit" class="footer-modalbtn">Subscribe</button>
-                        <svg class="footer-iconsend" width="24" height="20">
-                            <use href="./images/icons.svg#icon-send"></use>
-                        </svg>
-                    </form>
-                </div>
+                <p class="footer-modaltext">Subscribe</p>
+                <form class="footer-form">
+                    <label aria-label="footer-email" class="footer-label-email">
+                        <input type="email" class="footer-email" placeholder="E-mail">
+                    </label>
+                    <button type="submit" class="footer-modalbtn">Subscribe</button>
+                    <svg class="footer-iconsend" width="24" height="24">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                </form>
+
             </div>
 
 
         </div>
     </footer>
     <!-- modal window -->
-    <div class="overlay-modal">
+    <div class="overlay-modal is-open">
         <div class="modal">
             <button type="button" class="btn-modal">
                 <svg class="modal-icon" width="8" height="8">
