--- a/index.html
+++ b/index.html
@@ -457,12 +457,13 @@
                 <p class="footer-modaltext">Subscribe</p>
                 <form class="footer-form">
                     <label aria-label="footer-email" class="footer-label-email">
-                        <input type="email" class="footer-email" placeholder="E-mail">
+                        <input name="footer-input" type="email" class="footer-email" placeholder="E-mail">
                     </label>
-                    <button type="submit" class="footer-modalbtn">Subscribe</button>
-                    <svg class="footer-iconsend" width="24" height="24">
-                        <use href="./images/icons.svg#icon-send"></use>
-                    </svg>
+                    <button type="submit" class="footer-modalbtn">Subscribe
+                        <svg class="footer-iconsend" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
                 </form>
 
             </div>
