--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         </div>
     </footer>
     <!-- modal window -->
-    <div class="overlay-modal is-open">
+    <div class="overlay-modal">
         <div class="modal">
             <button type="button" class="btn-modal">
                 <svg class="modal-icon" width="8" height="8">
@@ -522,14 +522,15 @@
                 <div class="modal-policy">
                     <input id="user-privacy" value="true" class="check-modal visually-hidden" type="checkbox"
                         name="user-privacy">
-                    <label for="user-privacy" class="modal-policylabel">I accept the terms and conditions of
-                        the</label><a class="link-policy" href="">Privacy
-                        Policy</a>
-                    <span class="span-modal">
-                        <svg class="icon-modal-check" width="10" height="8">
-                            <use class="icon-check" href="./images/icons.svg#icon-check"></use>
-                        </svg>
-                    </span>
+                    <label for="user-privacy" class="modal-policylabel">
+                        <span class="span-modal">
+                            <svg class="icon-modal-check" width="10" height="8">
+                                <use class="icon-check" href="./images/icons.svg#icon-check"></use>
+                            </svg></span>I accept the terms and conditions of
+                        the<a class="link-policy" href="">Privacy
+                            Policy</a>
+
+                    </label>
                 </div>
 
 
