done all changes

--- a/index.html
+++ b/index.html
@@ -526,10 +526,11 @@
                         <span class="span-modal">
                             <svg class="icon-modal-check" width="10" height="8">
                                 <use class="icon-check" href="./images/icons.svg#icon-check"></use>
-                            </svg></span>I accept the terms and conditions of
-                        the<a class="link-policy" href="">Privacy
-                            Policy</a>
 
+                            </svg></span>
+                        <p class="textlabel-accept">I accept the terms and conditions of
+                            the<a class="link-policy" href="">Privacy
+                                Policy</a></p>
                     </label>
                 </div>
 
