--- a/index.html
+++ b/index.html
@@ -533,6 +533,7 @@
                                 Policy</a></p>
                     </label>
                 </div>
+                <div class="ok"></div>
 
 
 
