--- a/index.html
+++ b/index.html
@@ -528,9 +528,9 @@
                                 <use class="icon-check" href="./images/icons.svg#icon-check"></use>
 
                             </svg></span>
-                        <p class="textlabel-accept">I accept the terms and conditions of
+                        <span class="textlabel-accept">I accept the terms and conditions of
                             the<a class="link-policy" href="">Privacy
-                                Policy</a></p>
+                                Policy</a></span>
                     </label>
                 </div>
                 <div class="ok"></div>
