--- a/index.html
+++ b/index.html
@@ -522,15 +522,15 @@
                 <div class="modal-policy">
                     <input id="user-privacy" value="true" class="check-modal visually-hidden" type="checkbox"
                         name="user-privacy">
-                    <label for="user-privacy" class="modal-policylabel">
+                    <label for="user-privacy" class="modal-policylabel">I accept the terms and conditions of
+                        the<a class="link-policy" href="">Privacy
+                            Policy</a>
                         <span class="span-modal">
                             <svg class="icon-modal-check" width="10" height="8">
                                 <use class="icon-check" href="./images/icons.svg#icon-check"></use>
 
                             </svg></span>
-                        <span class="textlabel-accept">I accept the terms and conditions of
-                            the<a class="link-policy" href="">Privacy
-                                Policy</a></span>
+
                     </label>
                 </div>
                 <div class="ok"></div>
