--- a/index.html
+++ b/index.html
@@ -514,6 +514,8 @@
                         </svg>
                     </div>
                 </div>
+
+
                 <div class="checkpolicy-modal">
                     <label for="user-comment" class="check-policy">Comment</label>
                     <textarea id="user-comment" name="user-comment" class="text-area"
@@ -522,29 +524,26 @@
                 <div class="modal-policy">
                     <input id="user-privacy" value="true" class="check-modal visually-hidden" type="checkbox"
                         name="user-privacy">
-                    <label for="user-privacy" class="modal-policylabel">I accept the terms and conditions of
-                        the<a class="link-policy" href="">Privacy
-                            Policy</a>
-                        <span class="span-modal">
+                    <label for="user-privacy" class="modal-policylabel"><span class="span-modal">
                             <svg class="icon-modal-check" width="10" height="8">
                                 <use class="icon-check" href="./images/icons.svg#icon-check"></use>
+                            </svg>
+                        </span>I accept the terms and conditions of
+                        the<a class="link-policy" href="">Privacy
+                            Policy</a></label>
 
-                            </svg></span>
 
-                    </label>
                 </div>
-                <div class="ok"></div>
-
-
-
                 <div class="bottom-btn-modal">
                     <button type="submit" class="btn-undermodal">Send
                     </button>
                 </div>
+
+
+
             </form>
         </div>
-    </div>
-    <!--  -->
+        <!--  -->
 </body>
 
 </html>
