--- a/index.html
+++ b/index.html
@@ -534,16 +534,16 @@
 
 
                 </div>
-                <div class="bottom-btn-modal">
-                    <button type="submit" class="btn-undermodal">Send
-                    </button>
-                </div>
+                <!-- <div class="bottom-btn-modal"> -->
+                <button type="submit" class="btn-undermodal">Send
+                </button>
+                <!-- </div> -->
 
 
 
             </form>
         </div>
-        <!--  -->
+    </div>
 </body>
 
 </html>
