--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 </div>
 
 
-                <div class="iconphone-wrap">
+                <div class="iconname-wrap">
                     <label for="user-phone" class="label-input">Phone</label>
                     <div class="class-for-input">
                         <input id="user-phone" class="input-modal" type="number" name="user-phone">
@@ -505,7 +505,7 @@
                     </div>
                 </div>
 
-                <div class="iconmail-wrap">
+                <div class="iconname-wrap">
                     <label for="user-email" class="label-input">Email</label>
                     <div class="class-for-input">
                         <input id="user-email" class="input-modal" type="text" name="user-email">
