--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                     <label for="user-phone" class="label-input">Phone</label>
                     <div class="class-for-input">
                         <input id="user-phone" class="input-modal" type="number" name="user-phone">
-                        <svg class="icon-modalphone" width="18" height="24">
+                        <svg class="icon-modalname" width="18" height="24">
                             <use class="use-modalphone" href="./images/icons.svg#icon-tel"></use>
                         </svg>
                     </div>
@@ -509,7 +509,7 @@
                     <label for="user-email" class="label-input">Email</label>
                     <div class="class-for-input">
                         <input id="user-email" class="input-modal" type="text" name="user-email">
-                        <svg class="icon-modalemail" width="18" height="24">
+                        <svg class="icon-modalname" width="18" height="24">
                             <use class="use-modalemail" href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
