--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
 
                 <div class="checkpolicy-modal">
-                    <label for="user-comment" class="check-policy">Comment</label>
+                    <label for="user-comment" class="label-input">Comment</label>
                     <textarea id="user-comment" name="user-comment" class="text-area"
                         placeholder="Text input"></textarea>
                 </div>
