--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         </div>
     </footer>
     <!-- modal window -->
-    <div class="overlay-modal">
+    <div class="overlay-modal is-open">
         <div class="modal">
             <button type="button" class="btn-modal">
                 <svg class="modal-icon" width="8" height="8">
