--- a/index.html
+++ b/index.html
@@ -530,7 +530,8 @@
                             </svg>
                         </span>I accept the terms and conditions of
                         the<a class="link-policy" href="">Privacy
-                            Policy</a></label>
+                            Policy</a>
+                    </label>
 
 
                 </div>
