--- a/index.html
+++ b/index.html
@@ -529,7 +529,8 @@
                                 <use class="icon-check" href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>I accept the terms and conditions of
-                        the<a class="link-policy" href="">Privacy
+                        the
+                        <a class="link-policy" href="">Privacy
                             Policy</a>
                     </label>
 
