--- a/index.html
+++ b/index.html
@@ -530,8 +530,7 @@
                                 <use class="icon-check" href="./images/icons.svg#icon-check"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of
-                        the
+                        I accept the terms and conditions of the
                         <a class="link-policy" href="">Privacy
                             Policy</a>
                     </label>
