--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=0,1" />
     <title>Web Studio</title>
 
 </head>
@@ -20,7 +21,7 @@
 <body>
 
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header-container">
 
 
@@ -49,18 +50,18 @@
                 </ul>
             </address>
         </div>
-    </header>
+    </header> -->
 
     <main>
         <!-- hero section 1 -->
 
-        <section class="hero">
+        <!-- <section class="hero">
             <div class="container hero-container">
                 <h1 class="hero-title">Effective Solutions
                     for Your Business</h1>
                 <button class="button-hero" type="button">Order Service</button>
             </div>
-        </section>
+        </section> -->
         <!-- hidden section 2 -->
         <section class="hidden">
             <div class="container hidden-container">
@@ -70,7 +71,7 @@
 
                     <li class="hidden-item">
                         <div class="features-icon">
-                            <svg width="64" height="64">
+                            <svg class="svg-hidden" width="64" height="64">
                                 <use class="icons-secondsection antenna" href="./images/icons.svg#icon-antenna"></use>
 
                             </svg>
@@ -81,7 +82,7 @@
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="hidden-item">
-                        <div class="features-icon"><svg width="64" height="64">
+                        <div class="features-icon"><svg class="svg-hidden" width="64" height="64">
                                 <use class="icons-secondsection antenna" href="./images/icons.svg#icon-clock"></use>
                             </svg></div>
 
@@ -94,7 +95,7 @@
                     </li>
                     <li class="hidden-item">
                         <div class="features-icon">
-                            <svg width="64" height="64">
+                            <svg class="svg-hidden" width="64" height="64">
                                 <use class="icons-secondsection antenna" href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -106,7 +107,7 @@
                             risk.</p>
                     </li>
                     <li class="hidden-item">
-                        <div class="features-icon"><svg width="64" height="64">
+                        <div class="features-icon"><svg class="svg-hidden" width="64" height="64">
                                 <use class="icons-secondsection antenna" href="./images/icons.svg#icon-astronaut"></use>
                             </svg></div>
 
@@ -122,7 +123,7 @@
         </section>
 
         <!-- team section 3 -->
-        <section class="team">
+        <!-- <section class="team">
             <div class="container team-title-container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
@@ -130,10 +131,10 @@
                         <img class="team-img" src="./images/img-3.jpg" alt="mark guerrero" height="260" width="264">
                         <div class="team-li-container">
                             <h3 class="hteam-title">Mark Guerrero</h3>
-                            <p class="team-text">Product Designer</p>
-                            <!-- Icons -->
+                            <p class="team-text">Product Designer</p> -->
+        <!-- Icons -->
 
-                            <ul class="team-icon-list">
+        <!-- <ul class="team-icon-list">
                                 <li class="team-iconfon">
                                     <a class="team-iconlink" href="">
                                         <svg class="team-icons" width="16" height="16">
@@ -173,10 +174,10 @@
                         <img class="team-img" src="./images/img-2.jpg" alt="tom ford" height="260" width="264">
                         <div class="team-li-container">
                             <h3 class="hteam-title">Tom Ford</h3>
-                            <p class="team-text">Frontend Developer</p>
-                            <!-- Icons -->
+                            <p class="team-text">Frontend Developer</p> -->
+        <!-- Icons -->
 
-                            <ul class="team-icon-list">
+        <!-- <ul class="team-icon-list">
                                 <li class="team-iconfon">
                                     <a class="team-iconlink" href="">
                                         <svg class="team-icons" width="16" height="16">
@@ -214,10 +215,10 @@
                         <img class="team-img" src="./images/img-1.jpg" alt="Camila Garcia" height="260" width="264">
                         <div class="team-li-container">
                             <h3 class="hteam-title">Camila Garcia</h3>
-                            <p class="team-text">Marketing</p>
-                            <!-- Icons -->
+                            <p class="team-text">Marketing</p> -->
+        <!-- Icons -->
 
-                            <ul class="team-icon-list">
+        <!-- <ul class="team-icon-list">
                                 <li class="team-iconfon">
                                     <a class="team-iconlink" href="">
                                         <svg class="team-icons" width="16" height="16">
@@ -255,10 +256,10 @@
                         <img class="team-img" src="./images/daniel.jpg" alt="Daniel Wilson" height="260" width="264">
                         <div class="team-li-container">
                             <h3 class="hteam-title">Daniel Wilson</h3>
-                            <p class="team-text">UI Designer</p>
-                            <!-- Icons -->
+                            <p class="team-text">UI Designer</p> -->
+        <!-- Icons -->
 
-                            <ul class="team-icon-list">
+        <!-- <ul class="team-icon-list">
                                 <li class="team-iconfon">
                                     <a class="team-iconlink" href="">
                                         <svg class="team-icons" width="16" height="16">
@@ -295,11 +296,11 @@
 
                 </ul>
 
-            </div>
+            </div> -->
 
         </section>
         <!-- our portfolio section 4 -->
-        <section class="portfolio">
+        <!-- <section class="portfolio">
             <div class="container portfolio-container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
 
@@ -398,23 +399,23 @@
                 </ul>
 
             </div>
-        </section>
+        </section> -->
     </main>
 
 
-    <footer class="footer">
-        <div class="container footer-container">
-            <!-- div for logo -->
-            <div class="footer-logo">
+    <!-- <footer class="footer">
+        <div class="container footer-container"> -->
+    <!-- div for logo -->
+    <!-- <div class="footer-logo">
                 <a class="footer-link" href="./index.html">Web<span class="footer-span">Studio</span></a>
 
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital
                     marketing &
                     growth solutions.</p>
-            </div>
+            </div> -->
 
-            <!-- div for icons -->
-            <div class="footer-icons">
+    <!-- div for icons -->
+    <!-- <div class="footer-icons">
                 <p class="footer-texticons">
                     Social media
                 </p>
@@ -451,28 +452,28 @@
                     </li>
 
                 </ul>
-            </div>
-            <!-- footer modal -->
-            <div class="footer-modal">
-                <p class="footer-modaltext">Subscribe</p>
-                <form class="footer-form">
-                    <label aria-label="footer-email" class="footer-label-email">
-                        <input name="footer-input" type="email" class="footer-email" placeholder="E-mail">
-                    </label>
-                    <button type="submit" class="footer-modalbtn">Subscribe
-                        <svg class="footer-iconsend" width="24" height="24">
-                            <use href="./images/icons.svg#icon-send"></use>
-                        </svg>
-                    </button>
-                </form>
+            </div> -->
+    <!-- footer modal -->
+    <!-- <div class="footer-modal">
+        <p class="footer-modaltext">Subscribe</p>
+        <form class="footer-form">
+            <label aria-label="footer-email" class="footer-label-email">
+                <input name="footer-input" type="email" class="footer-email" placeholder="E-mail">
+            </label>
+            <button type="submit" class="footer-modalbtn">Subscribe
+                <svg class="footer-iconsend" width="24" height="24">
+                    <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+            </button>
+        </form>
 
-            </div>
+    </div> -->
 
 
-        </div>
+    </div>
     </footer>
     <!-- modal window -->
-    <div class="overlay-modal is-open">
+    <div class="overlay-modal">
         <div class="modal">
             <button type="button" class="btn-modal">
                 <svg class="modal-icon" width="8" height="8">
