--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=0,1" />
+
     <title>Web Studio</title>
 
 </head>
@@ -123,7 +123,7 @@
         </section>
 
         <!-- team section 3 -->
-        <!-- <section class="team">
+        <section class="team">
             <div class="container team-title-container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
@@ -131,10 +131,9 @@
                         <img class="team-img" src="./images/img-3.jpg" alt="mark guerrero" height="260" width="264">
                         <div class="team-li-container">
                             <h3 class="hteam-title">Mark Guerrero</h3>
-                            <p class="team-text">Product Designer</p> -->
-        <!-- Icons -->
+                            <p class="team-text">Product Designer</p>
 
-        <!-- <ul class="team-icon-list">
+                            <ul class="team-icon-list">
                                 <li class="team-iconfon">
                                     <a class="team-iconlink" href="">
                                         <svg class="team-icons" width="16" height="16">
@@ -174,10 +173,10 @@
                         <img class="team-img" src="./images/img-2.jpg" alt="tom ford" height="260" width="264">
                         <div class="team-li-container">
                             <h3 class="hteam-title">Tom Ford</h3>
-                            <p class="team-text">Frontend Developer</p> -->
-        <!-- Icons -->
+                            <p class="team-text">Frontend Developer</p>
 
-        <!-- <ul class="team-icon-list">
+
+                            <ul class="team-icon-list">
                                 <li class="team-iconfon">
                                     <a class="team-iconlink" href="">
                                         <svg class="team-icons" width="16" height="16">
@@ -215,10 +214,9 @@
                         <img class="team-img" src="./images/img-1.jpg" alt="Camila Garcia" height="260" width="264">
                         <div class="team-li-container">
                             <h3 class="hteam-title">Camila Garcia</h3>
-                            <p class="team-text">Marketing</p> -->
-        <!-- Icons -->
+                            <p class="team-text">Marketing</p>
 
-        <!-- <ul class="team-icon-list">
+                            <ul class="team-icon-list">
                                 <li class="team-iconfon">
                                     <a class="team-iconlink" href="">
                                         <svg class="team-icons" width="16" height="16">
@@ -256,10 +254,10 @@
                         <img class="team-img" src="./images/daniel.jpg" alt="Daniel Wilson" height="260" width="264">
                         <div class="team-li-container">
                             <h3 class="hteam-title">Daniel Wilson</h3>
-                            <p class="team-text">UI Designer</p> -->
-        <!-- Icons -->
+                            <p class="team-text">UI Designer</p>
 
-        <!-- <ul class="team-icon-list">
+
+                            <ul class="team-icon-list">
                                 <li class="team-iconfon">
                                     <a class="team-iconlink" href="">
                                         <svg class="team-icons" width="16" height="16">
@@ -296,11 +294,11 @@
 
                 </ul>
 
-            </div> -->
+            </div>
 
         </section>
         <!-- our portfolio section 4 -->
-        <!-- <section class="portfolio">
+        <section class="portfolio">
             <div class="container portfolio-container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
 
@@ -399,7 +397,7 @@
                 </ul>
 
             </div>
-        </section> -->
+        </section>
     </main>
 
 
